--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Ajax Type</title>
 </head>
 <body>
+    <h1 class="cont">Welcome to population chart</h1>
     <form class="search-form">
         <input type="text" class="search" placeholder="City or State">
         <ul class="suggestion">
